--- a/PyTorch_MNIST.ipynb
+++ b/PyTorch_MNIST.ipynb
@@ -135,7 +135,8 @@
         "train_loader = dataloader.DataLoader(train, **dataloader_kwargs)\n",
         "test_loader = dataloader.DataLoader(test, **dataloader_kwargs)\n",
         "\n",
-        "train_data = train.train_data"
+        "train_data = train.train_data\n",
+        "test_data = test.test_data"
       ],
       "execution_count": null,
       "outputs": []
@@ -181,11 +182,15 @@
         "id": "J201nOzNZ03X"
       },
       "source": [
-        "def show_images(batch):\n",
-        "  im = torchvision.utils.make_grid(batch)\n",
-        "  plt.figure(figsize=(10, 10))\n",
-        "  plt.imshow(np.transpose(im.numpy(), (1,2,0))) #np.transpose takes in 2 arguments the input array (or image), and the transpose axis as a tuple\n",
-        "  plt.show()\n",
+        "def show_images(batch, labels):\n",
+        "  plt.figure(figsize=(10, 9))\n",
+        "  plt.subplots_adjust(hspace=0.5)\n",
+        "  for n in range(30):\n",
+        "    plt.subplot(6,5, n+1) #create our subplot 6x5 \n",
+        "    plt.imshow(batch[n].view(batch[n].shape[1], batch[n].shape[2]), cmap=\"gray\")\n",
+        "    plt.title(str(labels[n].item()))\n",
+        "    plt.axis(\"off\")\n",
+        "    _= plt.suptitle(\"MNIST Dataset \")\n",
         "\n",
         "dataiter = iter(train_loader)\n",
         "images, labels = dataiter.next()\n",
@@ -197,7 +202,7 @@
         "#print(\"my_batch shape\")\n",
         "#print(my_batch.shape)\n",
         "\n",
-        "show_images(my_batch)\n"
+        "show_images(my_batch, batch_labels)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -261,7 +266,7 @@
         "\n",
         "\n",
         "      self.optimizer = optim.SGD(self.parameters(), lr=lrate, momentum=momentum)\n",
-        "      self.loss_fn = nn.CrossEntropyLoss\n",
+        "      self.loss_fn = nn.CrossEntropyLoss()\n",
         "\n",
         "\n",
         "\n",
@@ -284,10 +289,9 @@
         "        self.optimizer.zero_grad()\n",
         "\n",
         "        outputs = self.forward(x)\n",
-        "        predicted = torch.max(outputs.data, 1)\n",
         "\n",
         "        #get the loss and backpropagate it\n",
-        "        loss = self.loss_fn(predicted, y)\n",
+        "        loss = self.loss_fn(outputs, y)\n",
         "        loss.backward()\n",
         "\n",
         "        self.optimizer.step()\n",
@@ -320,7 +324,11 @@
         "      data, labels = data_batch\n",
         "      curr_loss += model.step(data, labels)\n",
         "\n",
+        "    print(\"loss for epoch \", t+1)\n",
+        "    print(curr_loss)\n",
         "    losses.append(curr_loss)\n",
+        "    \n",
+        "  return losses\n",
         "      \n"
       ],
       "execution_count": null,
@@ -345,7 +353,8 @@
         "  num_correct = 0\r\n",
         "  for data_batch in test_loader:\r\n",
         "    input, labels = data_batch\r\n",
-        "    predicted = model(input)\r\n",
+        "    output = model(input)\r\n",
+        "    _, predicted = torch.max(output.data, 1)\r\n",
         "    num_correct += (predicted == labels).sum()\r\n",
         "  \r\n",
         "  return (num_correct/n)*100.0\r\n"
@@ -396,10 +405,77 @@
         "id": "I0C5MN1GZRyh"
       },
       "source": [
-        "train(model=model, train_loader=train_loader, n_epochs=6)"
+        "losses = train(model=model, train_loader=train_loader, n_epochs=8)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tj6o6xH602wx"
+      },
+      "source": [
+        "Test out this model on some fresh data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JtsZoX2i1IwQ"
+      },
+      "source": [
+        "test_len = len(test_data)\r\n",
+        "accuracy = test(model=model, test_loader=test_loader, n=test_len)\r\n",
+        "print(accuracy.item())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wVyClxeRTtMR"
+      },
+      "source": [
+        "# Plot out the result\r\n",
+        "\r\n",
+        "here is our model making some predictions for us. let's use the train batch:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yKtGSJbVnA1B"
+      },
+      "source": [
+        "output = model.forward(my_batch)\r\n",
+        "_, predictions = torch.max(output.data, 1)\r\n",
+        "\r\n",
+        "def show_prediction_results(batch, labels, predicted_labels):\r\n",
+        "  plt.figure(figsize=(10, 10))\r\n",
+        "  for n in range(30):\r\n",
+        "    plt.subplot(6,5, n+1)\r\n",
+        "    plt.subplots_adjust(hspace=0.5)\r\n",
+        "    plt.imshow(batch[n].view(batch[n].shape[1], batch[n].shape[2]), cmap=\"gray\")\r\n",
+        "    color = \"green\" if (predicted_labels[n].item() == labels[n].item()) else \"red\"\r\n",
+        "    plt.title(\"number: \"+ str(predicted_labels[n].item()), color=color)\r\n",
+        "    plt.axis(\"off\")\r\n",
+        "    _= plt.suptitle(\"MNIST Predictions\")\r\n",
+        "\r\n",
+        "show_prediction_results(my_batch, batch_labels, predictions)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6icu6MmjtPmZ"
+      },
+      "source": [
+        "our model has given a 92% Accuracy on the MNIST dataset. It's amazing how such a simple network can give fascinating results"
+      ]
     }
   ]
 }
