--- a/PyTorch_MNIST.ipynb
+++ b/PyTorch_MNIST.ipynb
@@ -33,7 +33,7 @@
         "id": "MlcRYlolhht4"
       },
       "source": [
-        "Here, I create a neural network for the MNIST dataset; because, do you really work on AI if you don't have an MNIST implementation of a neural network?"
+        "Here, I create a neural network for the MNIST dataset; because, do you really work on AI if you don't have an a neural network for the MNIST dataset?"
       ]
     },
     {
